# LibDocument

./: CMakeLists.txt  LICENSE.txt  README.md  clean.sh  copy_html.sh  xcode.sh
include/: document.h  json.h  trie.h
logo/: LibDocument.psd
src/examples/: ex1.c
src/lib/: document.c  json.c  trie.c
templates/: customdoxygen.css  footer.html  header.html
test/: main.cpp
test/libdocument/: document.cpp  json.cpp  trie.cpp
test/testpy/: test.py
